--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 .container{
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
-    width: 1000px;
+    width: 95%;
     margin-left: 20px;
 }
 .container > div{
