--- a/style.css
+++ b/style.css
@@ -22,3 +22,12 @@ form{
 form > input{
     margin-right: 10px;
 }
+.header{
+    font-weight: bold;
+    color: #979797;
+    font-size: 20px;
+}
+.header:hover{
+    background-color: #979797;
+    cursor: pointer;
+}
