--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 .container{
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 14% 14% 14% 14% 14% 14% 14%;
     width: 95%;
     margin-left: 20px;
 }
@@ -22,6 +22,7 @@ form{
 form > input{
     margin-right: 10px;
 }
+
 #header-name:hover{
     background-color: #979797;
     cursor: pointer;
@@ -51,8 +52,11 @@ form > input{
     background-color: #979797;
     position:absolute;
     right: 43px;
-    top: 186px;
+    top: 180px;
     display: none;
-    flex-direction: column;
+}
+#form{
+    padding: 0px;
+    margin: 0px;
 }
 
