--- a/style.css
+++ b/style.css
@@ -35,7 +35,6 @@
 }
 .container > div{
     border: 1px solid #979797;
-    padding: 30px;
 }
 form{
     margin-left: 20px;
@@ -67,20 +66,37 @@ form > input{
     background-color: #979797;
     cursor: pointer;
 }
-.dropdown-button{
-    position: absolute;
-    right: 43px;
-    top: 165px;
-}
+
 .dropdown{
     background-color: #979797;
     position:absolute;
     right: 43px;
-    top: 180px;
+    top: 140px;
     display: none;
 }
 #form{
     padding: 0px;
     margin: 0px;
+}
+.name{
+    padding: 20px;
+}
+.plan{
+    padding: 20px;
+}
+.forecast{
+    padding: 20px;
+}
+.best{
+    padding: 20px;
+}
+.monthly{
+    padding: 20px;
+}
+.commit{
+    padding: 20px;
+}
+.comments{
+    padding: 20px;
 }
 
