--- a/style.css
+++ b/style.css
@@ -45,38 +45,70 @@ form{
 form > input{
     margin-right: 10px;
 }
+#header-name{
+    padding: 20px;
+    font-size: 20px;
+    font-weight: bolder;
+}
+#header-plan{
+    padding: 20px;
+    font-size: 20px;
+    font-weight: bolder;
+}
+#header-forecast{
+    padding: 20px;
+    font-size: 20px;
+    font-weight: bolder;
+}
+#header-best{
+    padding: 20px;
+    font-size: 20px;
+    font-weight: bolder;
+}
+#header-monthly{
+    padding: 20px;
+    font-size: 20px;
+    font-weight: bolder;
+}
+#header-commit{
+    padding: 20px;
+    font-size: 20px;
+    font-weight: bolder;
+}
+#header-comments{
+    padding: 20px;
+    font-size: 20px;
+    font-weight: bolder;
+}
 
 #header-name:hover{
-    background-color: #979797;
     cursor: pointer;
 }
 #header-plan:hover{
-    background-color: #979797;
     cursor: pointer;
 }
 #header-forecast:hover{
-    background-color: #979797;
     cursor: pointer;
 }
 #header-best:hover{
-    background-color: #979797;
     cursor: pointer;
 }
 #header-commit:hover{
-    background-color: #979797;
     cursor: pointer;
 }
 
 .dropdown{
-    background-color: #979797;
+    background-color: #42B983;
     position:absolute;
-    right: 43px;
-    top: 140px;
+    right: 50px;
+    top: 180px;
     display: none;
+    padding: 10px;
 }
 #form{
     padding: 0px;
     margin: 0px;
+    border: 0px;
 }
 .name{
     padding: 20px;
