--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Helvetica, sans-serif;
+    background-color: #F8F8F8;
 }
 
 .container{
@@ -17,7 +18,7 @@
 }
 #three.container{
     display: grid;
-    grid-template-columns: 25% 25% 25%;
+    grid-template-columns: 33% 33% 33%;
     width: 95%;
     margin-left: 20px;
 }
@@ -29,7 +30,7 @@
 }
 #one.container{
     display: grid;
-    grid-template-columns: 40%;
+    grid-template-columns: 100%;
     width: 95%;
     margin-left: 20px;
 }
@@ -80,6 +81,9 @@ form > input{
     font-size: 20px;
     font-weight: bolder;
 }
+span:hover{
+    color: blue;
+}
 
 #header-name:hover{
     cursor: pointer;
@@ -98,12 +102,13 @@ form > input{
 }
 
 .dropdown{
-    background-color: #42B983;
+    background-color: white;
     position:absolute;
     right: 50px;
     top: 180px;
     display: none;
     padding: 10px;
+    box-shadow: 5px 5px 20px;
 }
 #form{
     padding: 0px;
@@ -131,4 +136,11 @@ form > input{
 .comments{
     padding: 20px;
 }
-
+.apply{
+    font-size: 20px;
+    width: 100%;
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    background-color: #5AC192
+}
